--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -20,13 +20,13 @@ env_specs:
       - sphinx-rtd-theme
       - myst-parser
       - chardet
-    dependencies:
-      - python=3.13
-      - sphinx
-      - sphinx-rtd-theme
-      - myst-parser
-      - chardet
-
+ 
 channels:
   - defaults
-  - https://conda.anaconda.org/conda-forge
+  - conda-forge
+dependencies:
+  - python=3.13
+  - sphinx
+  - sphinx-rtd-theme
+  - myst-parser
+  - chardet
