--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,7 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    python: "3.13"
+    python: "mambaforge-4.10"
 
 # Build documentation in the "source/" directory with Sphinx
 sphinx:
