--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,7 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    python: "mambaforge-4.10"
+    python: "3.13"
 
 # Build documentation in the "source/" directory with Sphinx
 sphinx:
@@ -17,13 +17,13 @@ sphinx:
 formats:
   - pdf
 
-conda:
-  environment: anaconda-project.yml
+# conda:
+#   environment: anaconda-project.yml
 
 # Optionally, but recommended,
 # declare the Python requirements required to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: requirements.txt
+python:
+   install:
+   - requirements: requirements.txt
         
